AlteryxFunctionsTranspiler/AlteryxFunctionsParser.py
# Generated from AlteryxFunctions.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlteryxFunctionsParser ( Parser ):

    grammarFileName = "AlteryxFunctions.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'IF'", "'THEN'", "'ELSE'", 
                     "'ENDIF'", "'IIF'", "','", "'SWITCH'", "'TOBOOLEAN'", 
                     "'TODATE'", "'TONUMBER'", "'ToNumber'", "'TOSTRING'", 
                     "'ToString'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'AND'", "'OR'", "'NOT'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'IN'", 
                     "'NOT IN'", "'NULL'", "'TRUE'", "'FALSE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TEXT", "NUMBER", "BOOLEAN", "WS", "STRING", "AND", 
                      "OR", "NOT", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", 
                      "IN", "NOTIN", "NULL", "TRUE", "FALSE" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_value = 2
    RULE_ifExpr = 3
    RULE_iifExpr = 4
    RULE_switchExpr = 5
    RULE_casePair = 6
    RULE_conversionExpr = 7
    RULE_conversionFunction = 8
    RULE_condition = 9
    RULE_expression = 10
    RULE_functionCall = 11

    ruleNames =  [ "prog", "expr", "value", "ifExpr", "iifExpr", "switchExpr", 
                   "casePair", "conversionExpr", "conversionFunction", "condition", 
                   "expression", "functionCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    TEXT=16
    NUMBER=17
    BOOLEAN=18
    WS=19
    STRING=20
    AND=21
    OR=22
    NOT=23
    EQ=24
    NEQ=25
    LT=26
    GT=27
    LEQ=28
    GEQ=29
    IN=30
    NOTIN=31
    NULL=32
    TRUE=33
    FALSE=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,0)


        def EOF(self):
            return self.getToken(AlteryxFunctionsParser.EOF, 0)

        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = AlteryxFunctionsParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.expr(0)
            self.state = 25
            self.match(AlteryxFunctionsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifExpr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.IfExprContext,0)


        def iifExpr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.IifExprContext,0)


        def switchExpr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.SwitchExprContext,0)


        def conversionExpr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ConversionExprContext,0)


        def NOT(self):
            return self.getToken(AlteryxFunctionsParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlteryxFunctionsParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,i)


        def value(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ValueContext,0)


        def EQ(self):
            return self.getToken(AlteryxFunctionsParser.EQ, 0)

        def NEQ(self):
            return self.getToken(AlteryxFunctionsParser.NEQ, 0)

        def LT(self):
            return self.getToken(AlteryxFunctionsParser.LT, 0)

        def GT(self):
            return self.getToken(AlteryxFunctionsParser.GT, 0)

        def LEQ(self):
            return self.getToken(AlteryxFunctionsParser.LEQ, 0)

        def GEQ(self):
            return self.getToken(AlteryxFunctionsParser.GEQ, 0)

        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AlteryxFunctionsParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.state = 28
                self.ifExpr()
                pass
            elif token in [7]:
                self.state = 29
                self.iifExpr()
                pass
            elif token in [9]:
                self.state = 30
                self.switchExpr()
                pass
            elif token in [10, 11, 12, 13, 14, 15]:
                self.state = 31
                self.conversionExpr()
                pass
            elif token in [23]:
                self.state = 32
                self.match(AlteryxFunctionsParser.NOT)
                self.state = 33
                self.expr(3)
                pass
            elif token in [1]:
                self.state = 34
                self.match(AlteryxFunctionsParser.T__0)
                self.state = 35
                self.expr(0)
                self.state = 36
                self.match(AlteryxFunctionsParser.T__1)
                pass
            elif token in [17, 20, 32, 33, 34]:
                self.state = 38
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 46
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = AlteryxFunctionsParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 41
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 42
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1056964608) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 43
                    self.expr(5) 
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AlteryxFunctionsParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(AlteryxFunctionsParser.NUMBER, 0)

        def NULL(self):
            return self.getToken(AlteryxFunctionsParser.NULL, 0)

        def TRUE(self):
            return self.getToken(AlteryxFunctionsParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(AlteryxFunctionsParser.FALSE, 0)

        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = AlteryxFunctionsParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30065950720) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ConditionContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlteryxFunctionsParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,i)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_ifExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpr" ):
                listener.enterIfExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpr" ):
                listener.exitIfExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpr" ):
                return visitor.visitIfExpr(self)
            else:
                return visitor.visitChildren(self)




    def ifExpr(self):

        localctx = AlteryxFunctionsParser.IfExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(AlteryxFunctionsParser.T__2)
            self.state = 52
            self.condition()
            self.state = 53
            self.match(AlteryxFunctionsParser.T__3)
            self.state = 54
            self.expr(0)
            self.state = 55
            self.match(AlteryxFunctionsParser.T__4)
            self.state = 56
            self.expr(0)
            self.state = 57
            self.match(AlteryxFunctionsParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IifExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ConditionContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlteryxFunctionsParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,i)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_iifExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIifExpr" ):
                listener.enterIifExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIifExpr" ):
                listener.exitIifExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIifExpr" ):
                return visitor.visitIifExpr(self)
            else:
                return visitor.visitChildren(self)




    def iifExpr(self):

        localctx = AlteryxFunctionsParser.IifExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_iifExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(AlteryxFunctionsParser.T__6)
            self.state = 60
            self.match(AlteryxFunctionsParser.T__0)
            self.state = 61
            self.condition()
            self.state = 62
            self.match(AlteryxFunctionsParser.T__7)
            self.state = 63
            self.expr(0)
            self.state = 64
            self.match(AlteryxFunctionsParser.T__7)
            self.state = 65
            self.expr(0)
            self.state = 66
            self.match(AlteryxFunctionsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExpressionContext,0)


        def expr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,0)


        def casePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlteryxFunctionsParser.CasePairContext)
            else:
                return self.getTypedRuleContext(AlteryxFunctionsParser.CasePairContext,i)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_switchExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchExpr" ):
                listener.enterSwitchExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchExpr" ):
                listener.exitSwitchExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchExpr" ):
                return visitor.visitSwitchExpr(self)
            else:
                return visitor.visitChildren(self)




    def switchExpr(self):

        localctx = AlteryxFunctionsParser.SwitchExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_switchExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(AlteryxFunctionsParser.T__8)
            self.state = 69
            self.match(AlteryxFunctionsParser.T__0)
            self.state = 70
            self.expression()
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 71
                    self.match(AlteryxFunctionsParser.T__7)
                    self.state = 72
                    self.casePair() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 78
            self.match(AlteryxFunctionsParser.T__7)
            self.state = 79
            self.expr(0)
            self.state = 80
            self.match(AlteryxFunctionsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CasePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExpressionContext,0)


        def expr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,0)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_casePair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCasePair" ):
                listener.enterCasePair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCasePair" ):
                listener.exitCasePair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCasePair" ):
                return visitor.visitCasePair(self)
            else:
                return visitor.visitChildren(self)




    def casePair(self):

        localctx = AlteryxFunctionsParser.CasePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_casePair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.expression()
            self.state = 83
            self.match(AlteryxFunctionsParser.T__7)
            self.state = 84
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConversionExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conversionFunction(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ConversionFunctionContext,0)


        def expression(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_conversionExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConversionExpr" ):
                listener.enterConversionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConversionExpr" ):
                listener.exitConversionExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConversionExpr" ):
                return visitor.visitConversionExpr(self)
            else:
                return visitor.visitChildren(self)




    def conversionExpr(self):

        localctx = AlteryxFunctionsParser.ConversionExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conversionExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.conversionFunction()
            self.state = 87
            self.match(AlteryxFunctionsParser.T__0)
            self.state = 88
            self.expression()
            self.state = 89
            self.match(AlteryxFunctionsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConversionFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_conversionFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConversionFunction" ):
                listener.enterConversionFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConversionFunction" ):
                listener.exitConversionFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConversionFunction" ):
                return visitor.visitConversionFunction(self)
            else:
                return visitor.visitChildren(self)




    def conversionFunction(self):

        localctx = AlteryxFunctionsParser.ConversionFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conversionFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 64512) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = AlteryxFunctionsParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(AlteryxFunctionsParser.TEXT, 0)

        def NUMBER(self):
            return self.getToken(AlteryxFunctionsParser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(AlteryxFunctionsParser.BOOLEAN, 0)

        def expr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ExprContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = AlteryxFunctionsParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(AlteryxFunctionsParser.TEXT)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(AlteryxFunctionsParser.NUMBER)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.match(AlteryxFunctionsParser.BOOLEAN)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(AlteryxFunctionsParser.T__0)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(AlteryxFunctionsParser.T__1)
                pass
            elif token in [10, 11, 12, 13, 14, 15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.functionCall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conversionExpr(self):
            return self.getTypedRuleContext(AlteryxFunctionsParser.ConversionExprContext,0)


        def getRuleIndex(self):
            return AlteryxFunctionsParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = AlteryxFunctionsParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.conversionExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         




